syntax = "proto3";
package defundlabs.defund.query;

import "query/interquery.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "gogoproto/gogo.proto";

option go_package = "github.com/defund-labs/defund/x/query/types";

// GenesisState defines the query module's genesis state.
message GenesisState {
    repeated Interquery interqueryList = 1 [(gogoproto.nullable) = false];
    repeated InterqueryResult interqueryResultList = 2 [(gogoproto.nullable) = false];
    repeated InterqueryTimeoutResult interqueryTimeoutResultList = 3 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
